--- a/finish/src/main/operations/%2Forders/post/response_400.yaml
+++ b/finish/src/main/operations/%2Forders/post/response_400.yaml
@@ -3,5 +3,5 @@ mappings:
 - body:
     mappings:
     - message:
-        template: "Insuffienct stock to complete order"
+        template: "Insufficient stock to complete order"
 version: 1
