--- a/finish/src/main/operations/%2Fitems/get/response_200.yaml
+++ b/finish/src/main/operations/%2Fitems/get/response_200.yaml
@@ -16,8 +16,9 @@ mappings:
                     IN-STOCK\"}} '{{$item.\"CA-DESCRIPTION\"}}' in stock."
               - orders:
                   template: "{{$item.\"ON-ORDER\"}} '{{$item.\"CA-DESCRIPTION\"}}'\
-                    \ on order at unit price of ${{$number($item.\"CA-COST\")}}. Total\
-                    \ order value: ${{$number($item.\"CA-COST\") * $number($item.\"\
+                    \ on order at unit price of ${{$length($item.\"CA-COST\") = 0\
+                    \ ? 0 : $number($item.\"CA-COST\")}}. Total order value: ${{$length($item.\"\
+                    CA-COST\") = 0 ? 0 : $number($item.\"CA-COST\") * $number($item.\"\
                     ON-ORDER\")}}"
           - information:
               mappings:
@@ -26,7 +27,8 @@ mappings:
               - description:
                   template: "{{$item.\"CA-DESCRIPTION\"}}"
               - cost:
-                  template: "{{$number($item.\"CA-COST\")}}"
+                  template: "{{$length($item.\"CA-COST\") = 0 ? 0 : $number($item.\"\
+                    CA-COST\")}}"
               - department:
                   expression: "$item.\"CA-DEPARTMENT\""
               - stock:
