--- a/CatalogManagerApi.yaml
+++ b/CatalogManagerApi.yaml
@@ -7,9 +7,7 @@ info:
     name: Apache-2.0
     url: https://opensource.org/licenses/Apache-2.0
 servers:
-  - url: /project
-  - url: http://localhost:9080/
-  - url: https://localhost:9443/
+- url: /
 security:
   - BasicAuth: []
   - BearerAuth: []
