--- a/finish/src/main/operations/%2Forders/post/request.yaml
+++ b/finish/src/main/operations/%2Forders/post/request.yaml
@@ -2,7 +2,7 @@
 mappings:
 - commarea:
     mappings:
-    - catalog:
+    - DFH0XCP1:
         mappings:
         - CA-REQUEST-ID:
             template: "01ORDR"
