--- a/finish/src/main/operations/%2Forders/post/response_200.yaml
+++ b/finish/src/main/operations/%2Forders/post/response_200.yaml
@@ -3,5 +3,5 @@ mappings:
 - body:
     mappings:
     - message:
-        template: "{{$zosAssetResponse.commarea.catalog.\"CA-RESPONSE-MESSAGE\"}}"
+        template: "{{$zosAssetResponse.commarea.DFH0XCP1.\"CA-RESPONSE-MESSAGE\"}}"
 version: 1
