--- a/finish/src/main/operations/%2Fitems%2F%7Bid%7D/get/response_mapping.yaml
+++ b/finish/src/main/operations/%2Fitems%2F%7Bid%7D/get/response_mapping.yaml
@@ -1,10 +1,10 @@
 ---
 version: 1
 response_200.yaml:
-  condition: "$zosAssetResponse.commarea.catalog.\"CA-RETURN-CODE\" = 0"
+  condition: "$zosAssetResponse.commarea.DFH0XCP1.\"CA-RETURN-CODE\" = 0"
   httpStatusCode: 200
 response_404.yaml:
-  condition: "$zosAssetResponse.commarea.catalog.\"CA-RETURN-CODE\" = 20"
+  condition: "$zosAssetResponse.commarea.DFH0XCP1.\"CA-RETURN-CODE\" = 20"
   httpStatusCode: 404
 response_500.yaml:
   condition: true
