--- a/finish/src/main/operations/%2Forders/post/response_mapping.yaml
+++ b/finish/src/main/operations/%2Forders/post/response_mapping.yaml
@@ -1,10 +1,10 @@
 ---
 version: 1
 response_200.yaml:
-  condition: "$zosAssetResponse.commarea.catalog.\"CA-RETURN-CODE\" = 0"
+  condition: "$zosAssetResponse.commarea.DFH0XCP1.\"CA-RETURN-CODE\" = 0"
   httpStatusCode: 200
 response_400.yaml:
-  condition: "$zosAssetResponse.commarea.catalog.\"CA-RETURN-CODE\" = 97"
+  condition: "$zosAssetResponse.commarea.DFH0XCP1.\"CA-RETURN-CODE\" = 97"
   httpStatusCode: 400
 response_500.yaml:
   condition: true
