--- a/start/devfileV2.yaml
+++ b/start/devfileV2.yaml
@@ -12,22 +12,26 @@ projects:
         origin: 'https://github.com/charleeboyle/sample-cics-api-latest.git'
     name: catalog-manager-api
 components:
-    - name: zosconnect
-      container:
-        endpoints:
-          - exposure: public
-            name: zc-ui-http
-            path: /zosConnect/designer/
-            protocol: http
-            targetPort: 9080
-          - exposure: public
-            name: zc-ui-https
-            path: /zosConnect/designer/
-            protocol: https
-            targetPort: 9080
-        env:
-          - name: ZCON_DESIGNER_PROJECT
-            value: /projects/catalog-manager-api/start
-        image: 'icr.io/zosconnect/ibm-zcon-designer:3.0.74'
-        memoryLimit: 4927M
-        mountSources: true
+  - name: tools
+    container:
+      image: quay.io/devfile/universal-developer-image:ubi8-latest
+      memoryLimit: 3Gi
+  - name: zosconnect
+    container:
+      endpoints:
+        - exposure: public
+          name: zc-ui-http
+          path: /zosConnect/designer/
+          protocol: http
+          targetPort: 9080
+        - exposure: public
+          name: zc-ui-https
+          path: /zosConnect/designer/
+          protocol: https
+          targetPort: 9080
+      env:
+        - name: ZCON_DESIGNER_PROJECT
+          value: /projects/catalog-manager-api/start
+      image: 'icr.io/zosconnect/ibm-zcon-designer:3.0.74'
+      memoryLimit: 4927M
+      mountSources: true
