Update mapping files to 1.2

--- a/finish/src/main/operations/%2Fitems%2F%7Bid%7D/get/request.yaml
+++ b/finish/src/main/operations/%2Fitems%2F%7Bid%7D/get/request.yaml
@@ -1,12 +1,21 @@
 ---
+version: "1.2"
 mappings:
 - commarea:
     mappings:
     - DFH0XCP1:
+        required: false
+        nullable: false
         mappings:
         - CA-REQUEST-ID:
+            required: false
+            nullable: false
             template: "01INQS"
         - CA-INQUIRE-SINGLE:
+            required: false
+            nullable: false
             mappings:
             - CA-ITEM-REF-REQ:
+                required: false
+                nullable: false
                 expression: "$pathParameters.id"
