--- a/finish/src/main/operations/%2Fitems%2F%7Bid%7D/get/response_404.yaml
+++ b/finish/src/main/operations/%2Fitems%2F%7Bid%7D/get/response_404.yaml
@@ -1,7 +1,9 @@
 ---
+version: "1.2"
 mappings:
 - body:
     mappings:
     - message:
+        required: false
+        nullable: false
         template: "Item not found"
-version: 1
