--- a/finish/src/main/operations/%2Fitems/get/request.yaml
+++ b/finish/src/main/operations/%2Fitems/get/request.yaml
@@ -1,12 +1,21 @@
 ---
+version: "1.2"
 mappings:
 - commarea:
     mappings:
     - DFH0XCP1:
+        required: false
+        nullable: false
         mappings:
         - CA-REQUEST-ID:
+            required: false
+            nullable: false
             template: "01INQC"
         - CA-INQUIRE-REQUEST:
+            required: false
+            nullable: false
             mappings:
             - CA-LIST-START-REF:
+                required: false
+                nullable: false
                 expression: "$queryParameters.startItemID"
