--- a/finish/src/main/operations/%2Fitems/get/response_500.yaml
+++ b/finish/src/main/operations/%2Fitems/get/response_500.yaml
@@ -1,8 +1,10 @@
 ---
+version: "1.2"
 mappings:
 - body:
     mappings:
     - message:
+        required: false
+        nullable: false
         template: "{{$error.message}}{{$zosAssetResponse.commarea.DFH0XCP1.\"CA-RESPONSE-MESSAGE\"\
           }}"
-version: 1
