YAML sync fixing items array required to be false

--- a/finish/src/main/operations/%2Fitems/get/response_200.yaml
+++ b/finish/src/main/operations/%2Fitems/get/response_200.yaml
@@ -9,7 +9,7 @@ mappings:
         expression: "$zosAssetResponse.commarea.DFH0XCP1.\"CA-INQUIRE-REQUEST\".\"\
           CA-ITEM-COUNT\""
     - items:
-        required: true
+        required: false
         nullable: false
         foreach:
           input: "$zosAssetResponse.commarea.DFH0XCP1.\"CA-INQUIRE-REQUEST\".\"CA-CAT-ITEM\""
